# midia_pipe_hull

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODOs.md  failed_pyproject.toml  ms2rescore_results_parser.py  pyproject.toml  setup.py
midia_pipe_hull/: pipeline_assertions.py  pipeline_rules.py
midia_pipe_hull/pipelines/: base.py  experimental.py  sagepy.py  thpr.py
tools/: Stefan_50K.py  adjust_ms2rescore_config.py  count_edges.py  filter_edges.py  get_unimod_table.py  make_mgf.py  ms2rescore_results_parser.py  old_sage_to_new_sage.py  postprocess_compomics_rescoring.py  postprocess_new_sage.py  run_pipeline.py  sage_config_update.py  send_json_to_db.py  split_mgf.py  stat_sage_results.py  string2file.py  upsetnotme.py
