[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="midia_pipe_hull"
version="0.0.1"
description="Dependencies of the midiaID pipeline."
readme="README.md"
authors=[
    {name="Mateusz Krzysztof Łącki",email="matteo.lacki@gmail.com"},
    {name="Michał Piotr Startek",email="michalsta@mimuw.edu.pl"},
]
dependencies = [
    # "csvkit",
    # "ipykernel",
    # "ipython",
    # "jupyter",
    # "jupyterlab",
    # "matplotlib",
    # "openpyxl",
    # "opentims_bruker_bridge",
    # "plotly",
    # "plotnine",
    # "pymysql",
    # "pytest",
    # "seaborn",
    # "snakemake",
    # "virtualenvwrapper",
    # "pyqt5",
    # "ipympl",
    # "cowsay",
    # "UpSetPlot",
    # "duckdb",
    # "snakemaketools",
    "click",
    "pandas",
    "toml",
    "pony",
]

[project.scripts]
write_config = "tools.write_config:main"
assert_dataset_and_calibration_comply = "midia_pipe_hull.pipeline_assertions:assert_dataset_and_calibration_comply"

[project.urls]
homepage="https://github.com/midiaIDorg/midia_pipe_hull.git"
repository="https://github.com/midiaIDorg/midia_pipe_hull.git"